[gd_scene load_steps=14 format=3 uid="uid://cw0w25r4ysioq"]

[ext_resource type="Script" path="res://MainGame/MainMenu/MainMenuHandler.gd" id="1_wa8kx"]
[ext_resource type="Texture2D" uid="uid://b4is5it2tkesm" path="res://GameAssets/GUI/Background/black-screen_39.png" id="2_8m3j3"]
[ext_resource type="Texture2D" uid="uid://ci3rrvyqsiekw" path="res://GameAssets/GUI/Vector/PlayButton.png" id="3_eyiqf"]
[ext_resource type="Texture2D" uid="uid://dufcq32060ba5" path="res://GameAssets/GUI/Sharp Retro/Sharp Retro.png" id="4_2dgbl"]
[ext_resource type="Texture2D" uid="uid://c1evsc4v2au13" path="res://GameAssets/GUI/Vector/ExitIcon.png" id="5_xkqsw"]
[ext_resource type="Texture2D" uid="uid://co6lsh0xixgun" path="res://GameAssets/GUI/Vector/SettingsIcon.png" id="6_a75fi"]
[ext_resource type="Texture2D" uid="uid://eykuocnheb8" path="res://GameAssets/MainChar/Idle/idle.png" id="7_4jyk5"]
[ext_resource type="AudioStream" uid="uid://cqqt3wlqq0exr" path="res://GameAssets/Sounds/menu_bg.mp3" id="8_joif6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xopoc"]
texture = ExtResource("4_2dgbl")
texture_region_size = Vector2i(1, 1)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
8:2/0 = 0
129:36/size_in_atlas = Vector2i(6, 8)
129:36/0 = 0
97:36/size_in_atlas = Vector2i(6, 8)
97:36/0 = 0
9:36/size_in_atlas = Vector2i(6, 8)
9:36/0 = 0
201:52/size_in_atlas = Vector2i(6, 8)
201:52/0 = 0
145:36/size_in_atlas = Vector2i(6, 8)
145:36/0 = 0
73:36/size_in_atlas = Vector2i(5, 8)
73:36/0 = 0
177:36/size_in_atlas = Vector2i(6, 8)
177:36/0 = 0
41:36/size_in_atlas = Vector2i(6, 8)
41:36/0 = 0
113:36/size_in_atlas = Vector2i(6, 8)
113:36/0 = 0

[sub_resource type="TileSet" id="TileSet_ifreq"]
sources/0 = SubResource("TileSetAtlasSource_xopoc")

[sub_resource type="Animation" id="Animation_a7n6i"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ip53m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ch0pk"]
_data = {
"Idle": SubResource("Animation_a7n6i"),
"RESET": SubResource("Animation_ip53m")
}

[node name="MainMenu" type="Node2D" node_paths=PackedStringArray("menu_music")]
scale = Vector2(1.06063, 1.00805)
script = ExtResource("1_wa8kx")
menu_music = NodePath("menu_music_handler")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(907.951, 540.972)
scale = Vector2(1, 1.03734)
texture = ExtResource("2_8m3j3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.9999
offset_top = 36.0
offset_right = 54.0001
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.96, 0.582928)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 30
text = "

"
icon = ExtResource("3_eyiqf")

[node name="Title_Tile_Map" type="TileMap" parent="CanvasLayer"]
position = Vector2(600, 472)
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_ifreq")
format = 2
layer_0/tile_data = PackedInt32Array(0, 8454144, 36, 1, 6356992, 36, 2, 589824, 36, 3, 13172736, 52, 5, 9502720, 36, 6, 4784128, 36, 7, 11599872, 36, 8, 2686976, 36, 9, 7405568, 36)

[node name="ExitButton" type="Button" parent="CanvasLayer"]
offset_left = 1856.0
offset_top = 16.0
offset_right = 1935.0
offset_bottom = 90.0
scale = Vector2(0.69631, 0.638413)
theme_type_variation = &"FlatButton"
icon = ExtResource("5_xkqsw")

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 91.0
offset_bottom = 91.0
scale = Vector2(0.676645, 0.658599)
theme_type_variation = &"FlatButton"
icon = ExtResource("6_a75fi")

[node name="MainChar" type="Sprite2D" parent="."]
position = Vector2(905.122, 404.742)
scale = Vector2(3, 3)
texture = ExtResource("7_4jyk5")
hframes = 8
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainChar"]
libraries = {
"": SubResource("AnimationLibrary_ch0pk")
}
autoplay = "Idle"

[node name="menu_music_handler" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_joif6")
autoplay = true

[connection signal="button_down" from="CanvasLayer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="CanvasLayer/ExitButton" to="." method="_on_exit_button_button_down"]
[connection signal="button_down" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="finished" from="menu_music_handler" to="." method="_on_menu_music_handler_finished"]
